<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="4dp"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <ImageView
                android:id="@+id/ivImage_link"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:contentDescription=""
                tools:ignore="ContentDescription" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProductTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Product Title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvWeightTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_title"
                    android:textStyle="italic"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/tvColon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/colon" />

                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="3dp"
                    android:text="@string/weight"
                    tools:ignore="RtlSymmetry"
                    tools:text="500" />

                <TextView
                    android:id="@+id/tvWeightuom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_uom" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPackSizeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pack_size"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/colon" />

                <TextView
                    android:id="@+id/tvPacksize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:paddingRight="3dp"
                    android:text="@string/weight"
                    tools:ignore="RtlSymmetry"
                    tools:text="500" />

                <TextView
                    android:id="@+id/tvBaseuom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/base_uom" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvMinorder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/min_order"
                    android:textStyle="italic"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/colon" />

                <TextView
                    android:id="@+id/tvMinorderqty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="3dp"
                    android:text="@string/weight"
                    tools:ignore="RtlSymmetry"
                    tools:text="500" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:drawable/bottom_bar"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:touchscreenBlocksFocus="true"
        tools:ignore="UnusedAttribute">

        <EditText
            android:id="@+id/etCartqty"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:text="1"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_to_cart" />
    </LinearLayout>


</LinearLayout>
